--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                         $('.email').text("Email: " + data.email);
                         $('.adress').text("Adress: " + data.adress);
                         $('.qualifications').text('Qualifications: ' + data.qualifications);
-                        const ul = $('<ul>').appendTo('#links');
                         const refLink = data.links;
                         $(refLink).each(function(index, link) {
-                             ul.append($(document.createElement('li')).text(link));
+                            let li = $('<li>').appendTo('#links');
+                            li.append($(document.createElement('a')).attr('href',link).text(link));
                         })
                         //$('<li>', {href: data.links}).appendTo("#links");
                        
